02.feb (lv)
      - MusicXML import fixes: direction placement (not complete yet)
       (la)
      - improve MusicXML import of clefs
      - Changing velocity and on/off offsets for a group of selected notes (miwarre patch)
01.feb (la)
      - fix #9002: Reset Position doesn't affect tuplet bracket
30.jan (lv)
      - MusicXML import fixes: direction placement (not complete yet)
      - MusicXML export fixes: direction placement
      (db)
      - fixed vocal range for bartione and bass (in all languages)
27.jan (mi)
      - fix crash when opening time sig. palette (#8848)
      - corrected wrong C and Ccut time sig. bbox
26.jan (ws)
      - use QGlyphs() from Qt4.8 for drawing symbols which should speedup drawing
        (unfortunately this does not work (yet) for printing)
      - encapsulate QPainter into new Painter() class
25.jan (lv)
      - MusicXML import fixes: voltas
23.jan (lv)
      - MusicXML export fixes: dalsegno and friends
      (db)
      - Adding panning to templates
22.jan (lv)
      - MusicXML import fixes: dalsegno and friends
       (mi)
      - Tablature Properties dlg box: added support for presets (with 4
        built-in presets) (r. 3941)
21.jan (mi)
      - Time signature layout was wrong in staves with non-standard line number or
        spacing (mostly tablature staves) (r. 3937)
20.jan (mi)
      - support for 'upside down' tablatures (lowest string on top) (r. 3929)
      - Score::putNote() (edit.cpp): do not accept a new note on a tablature
        string already occupied (r. 3931)
      - Note::drag(): for tablatures, dragging up did not work: corrected.
      - Note::endDrag(): for tablatures, modified to keep same pitch on new
        string, if possible (also for 'upside down' tablatures) (r. 3935)
      - Added 7 (early music) symbols from mscore-20 font to internal tables (r. 3936)
19.jan (lv)
      - MusicXML import fixes: slurs and wedges
18.jan (ws)
      - fix #8654 using a patch from Miwarre
      - fix #8763